force-app/main/default/objects/Annual_Usage__c/Annual_Usage__c.object-meta.xml
<CustomObject>
    <label>Annual Usage</label>
    <nameField>
        <displayFormat>Annual Usage-{0}</displayFormat>
        <label>Annual Usage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Annual Usage</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>