force-app/main/default/objects/Annual_Usage__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>What customer account is this usage associated with?</description>
    <inlineHelpText>What customer account is this usage associated with?</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Annual Usage</relationshipLabel>
    <relationshipName>Annual_Usage</relationshipName>
    <type>Lookup</type>
</CustomField>