force-app/main/default/objects/Annual_Usage__c/fields/Actual_MDQ__c.field-meta.xml
<CustomField>
    <fullName>Actual_MDQ__c</fullName>
    <description>MDQ (Dth)</description>
    <inlineHelpText>MDQ (Dth)</inlineHelpText>
    <label>Actual MDQ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>