force-app/main/default/objects/Annual_Usage__c/fields/April__c.field-meta.xml
<CustomField>
    <fullName>April__c</fullName>
    <description>Monthly usage for April.</description>
    <inlineHelpText>Monthly usage for April.</inlineHelpText>
    <label>April</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>