force-app/main/default/objects/Annual_Usage__c/fields/August__c.field-meta.xml
<CustomField>
    <fullName>August__c</fullName>
    <description>Monthly usage for August.</description>
    <inlineHelpText>Monthly usage for August.</inlineHelpText>
    <label>August</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>