force-app/main/default/objects/Annual_Usage__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Which contract (option, basis, nymex) is this usage for</description>
    <inlineHelpText>Which contract (option, basis, nymex) is this usage for</inlineHelpText>
    <label>Contract</label>
    <referenceTo>Index__c</referenceTo>
    <relationshipLabel>Annual Usage</relationshipLabel>
    <relationshipName>Annual_Usage</relationshipName>
    <type>Lookup</type>
</CustomField>