force-app/main/default/objects/Annual_Usage__c/fields/December__c.field-meta.xml
<CustomField>
    <fullName>December__c</fullName>
    <description>Monthly usage for December.</description>
    <inlineHelpText>Monthly usage for December.</inlineHelpText>
    <label>December</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>