force-app/main/default/objects/Annual_Usage__c/fields/Estimated__c.field-meta.xml
<CustomField>
    <fullName>Estimated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this usage an estimation?</description>
    <inlineHelpText>Is this usage an estimation?</inlineHelpText>
    <label>Estimated?</label>
    <type>Checkbox</type>
</CustomField>