force-app/main/default/objects/Annual_Usage__c/fields/February__c.field-meta.xml
<CustomField>
    <fullName>February__c</fullName>
    <description>Monthly usage for February.</description>
    <inlineHelpText>Monthly usage for February.</inlineHelpText>
    <label>February</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>