force-app/main/default/objects/Annual_Usage__c/fields/Ignore__c.field-meta.xml
<CustomField>
    <fullName>Ignore__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do not consider this annual usage when calculating costs for the customer</description>
    <inlineHelpText>Do not consider this annual usage when calculating costs for the customer</inlineHelpText>
    <label>Ignore</label>
    <type>Checkbox</type>
</CustomField>