force-app/main/default/objects/Annual_Usage__c/fields/isNorm__c.field-meta.xml
<CustomField>
    <fullName>isNorm__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This annual usage is a normalized amount based on weather data calculations</description>
    <inlineHelpText>This annual usage is a normalized amount based on weather data calculations</inlineHelpText>
    <label>isNorm</label>
    <type>Checkbox</type>
</CustomField>