force-app/main/default/objects/Annual_Usage__c/fields/January__c.field-meta.xml
<CustomField>
    <fullName>January__c</fullName>
    <description>Monthly usage for January.</description>
    <inlineHelpText>Monthly usage for January.</inlineHelpText>
    <label>January</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>