force-app/main/default/objects/Annual_Usage__c/fields/July__c.field-meta.xml
<CustomField>
    <fullName>July__c</fullName>
    <description>Monthly usage for July.</description>
    <inlineHelpText>Monthly usage for July.</inlineHelpText>
    <label>July</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>