force-app/main/default/objects/Annual_Usage__c/fields/June__c.field-meta.xml
<CustomField>
    <fullName>June__c</fullName>
    <description>Monthly usage for June.</description>
    <inlineHelpText>Monthly usage for June.</inlineHelpText>
    <label>June</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>