force-app/main/default/objects/Annual_Usage__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <description>A combination of the premise number and the program year to avoid duplications</description>
    <externalId>true</externalId>
    <inlineHelpText>A combination of the premise number and the program year to avoid duplications</inlineHelpText>
    <label>Key</label>
    <length>55</length>
    <type>Text</type>
</CustomField>