force-app/main/default/objects/Annual_Usage__c/fields/March__c.field-meta.xml
<CustomField>
    <fullName>March__c</fullName>
    <description>Monthly usage for March.</description>
    <inlineHelpText>Monthly usage for March.</inlineHelpText>
    <label>March</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>