force-app/main/default/objects/Annual_Usage__c/fields/May__c.field-meta.xml
<CustomField>
    <fullName>May__c</fullName>
    <description>Monthly usage for May.</description>
    <inlineHelpText>Monthly usage for May.</inlineHelpText>
    <label>May</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>