force-app/main/default/objects/Annual_Usage__c/fields/November__c.field-meta.xml
<CustomField>
    <fullName>November__c</fullName>
    <description>Monthly usage for November.</description>
    <inlineHelpText>Monthly usage for November.</inlineHelpText>
    <label>November</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>