force-app/main/default/objects/Annual_Usage__c/fields/October__c.field-meta.xml
<CustomField>
    <fullName>October__c</fullName>
    <description>Monthly usage for October.</description>
    <inlineHelpText>Monthly usage for October.</inlineHelpText>
    <label>October</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>