force-app/main/default/objects/Annual_Usage__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Which order is this annual usage for?</description>
    <inlineHelpText>Which order is this annual usage for?</inlineHelpText>
    <label>Order</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Annual Usage</relationshipLabel>
    <relationshipName>Annual_Usage</relationshipName>
    <type>Lookup</type>
</CustomField>