force-app/main/default/objects/Annual_Usage__c/fields/Premise__c.field-meta.xml
<CustomField>
    <fullName>Premise__c</fullName>
    <description>The premise that this usage is tied to.</description>
    <inlineHelpText>The premise that this usage is tied to.</inlineHelpText>
    <label>Premise</label>
    <referenceTo>Premises__c</referenceTo>
    <relationshipLabel>Annual Usage</relationshipLabel>
    <relationshipName>Annual_Usage</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>