force-app/main/default/objects/Annual_Usage__c/fields/Premise_Usage_Sum__c.field-meta.xml
<CustomField>
    <fullName>Premise_Usage_Sum__c</fullName>
    <description>This premise&#39;s total usage for the year.</description>
    <formula>January__c + February__c + March__c  +April__c + May__c + June__c  +July__c  +August__c  +September__c  +October__c + November__c  +December__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This premise&#39;s total usage for the year.</inlineHelpText>
    <label>Premise Usage (sum of all months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>