force-app/main/default/objects/Annual_Usage__c/fields/Rate_Plan__c.field-meta.xml
<CustomField>
    <fullName>Rate_Plan__c</fullName>
    <description>The customer&#39;s rate plan during this usage.</description>
    <inlineHelpText>The customer&#39;s rate plan during this usage.</inlineHelpText>
    <label>Rate Plan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>