force-app/main/default/objects/Annual_Usage__c/fields/Selection_Channel__c.field-meta.xml
<CustomField>
    <fullName>Selection_Channel__c</fullName>
    <description>How did the customer sign up for this rate?</description>
    <inlineHelpText>How did the customer sign up for this rate?</inlineHelpText>
    <label>Selection Channel</label>
    <length>50</length>
    <type>Text</type>
</CustomField>