force-app/main/default/objects/Annual_Usage__c/fields/September__c.field-meta.xml
<CustomField>
    <fullName>September__c</fullName>
    <description>Monthly usage for September.</description>
    <inlineHelpText>Monthly usage for September.</inlineHelpText>
    <label>September</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>