force-app/main/default/objects/Annual_Usage__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <description>Gas supplier during this usage.</description>
    <inlineHelpText>Gas supplier during this usage.</inlineHelpText>
    <label>Supplier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>