force-app/main/default/objects/Annual_Usage__c/fields/Unit_of_measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_measure__c</fullName>
    <description>Unit of measure for this usage.</description>
    <inlineHelpText>Unit of measure for this usage.</inlineHelpText>
    <label>Unit of measure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Therms</fullName>
                <default>true</default>
                <label>Therms</label>
            </value>
            <value>
                <fullName>kWh</fullName>
            </value>
            <value>
                <fullName>Dth</fullName>
            </value>
            <value>
                <fullName>HDD</fullName>
            </value>
            <value>
                <fullName>CDD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>