force-app/main/default/objects/Annual_Usage__c/fields/Winter_Gas_Load_Factor__c.field-meta.xml
<CustomField>
    <fullName>Winter_Gas_Load_Factor__c</fullName>
    <formula>if (
   and(
      Premise_Usage_Sum__c != 0
   ),
    ((January__c  + February__c)/2 )  /  Premise_Usage_Sum__c ,
   1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Winter Gas Load Factor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>