force-app/main/default/objects/Annual_Usage__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <description>The year of this usage.</description>
    <inlineHelpText>The year of this usage.</inlineHelpText>
    <label>Program Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>